# internet-from-scratch

./: README.md  client.py  mock_server.py  pyproject.toml  server.py
http/: message.py
src/ifs/ifshttp/: __init__.py  message.py
